[Add] Fixed something on mobile

--- a/HTML and CSS/projects.css
+++ b/HTML and CSS/projects.css
@@ -42,7 +42,17 @@ body {
     font-size: 1.0rem;
     color: #999;
   }
-  
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-container > div {
+  margin: 0.5rem;
+  padding: 0.5rem;
+}
+
   .box-wrapper {
     text-align: center;
   }
